groove/trunk/src/groove/control/parse/GCLNewParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 GCLNew.g 2010-11-23 23:22:44

package groove.control.parse;
import groove.control.*;
import java.util.LinkedList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class GCLNewParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROGRAM", "BLOCK", "FUNCTIONS", "FUNCTION", "CALL", "DO_WHILE", "DO_UNTIL", "VAR", "ARG", "ARGS", "LCURLY", "RCURLY", "ID", "LPAR", "RPAR", "ALAP", "WHILE", "UNTIL", "DO", "IF", "ELSE", "TRY", "CHOICE", "OR", "SEMI", "BAR", "TRUE", "PLUS", "STAR", "SHARP", "ANY", "OTHER", "DOT", "COMMA", "NODE", "BOOL", "STRING", "INT", "REAL", "OUT", "DONT_CARE", "FALSE", "STRING_LIT", "INT_LIT", "REAL_LIT", "IntegerNumber", "NonIntegerNumber", "QUOTE", "EscapeSequence", "BSLASH", "CR", "NL", "AMP", "NOT", "MINUS", "ML_COMMENT", "SL_COMMENT", "WS"
    };
    public static final int REAL_LIT=48;
    public static final int FUNCTION=7;
    public static final int DO_UNTIL=10;
    public static final int STAR=32;
    public static final int INT_LIT=47;
    public static final int FUNCTIONS=6;
    public static final int WHILE=20;
    public static final int IntegerNumber=49;
    public static final int AMP=56;
    public static final int STRING_LIT=46;
    public static final int DO=22;
    public static final int NOT=57;
    public static final int ALAP=19;
    public static final int ID=16;
    public static final int EOF=-1;
    public static final int IF=23;
    public static final int ML_COMMENT=59;
    public static final int QUOTE=51;
    public static final int LPAR=17;
    public static final int ARG=12;
    public static final int COMMA=37;
    public static final int NonIntegerNumber=50;
    public static final int DO_WHILE=9;
    public static final int ARGS=13;
    public static final int PLUS=31;
    public static final int VAR=11;
    public static final int NL=55;
    public static final int DOT=36;
    public static final int CHOICE=26;
    public static final int SHARP=33;
    public static final int OTHER=35;
    public static final int NODE=38;
    public static final int ELSE=24;
    public static final int BOOL=39;
    public static final int LCURLY=14;
    public static final int INT=41;
    public static final int MINUS=58;
    public static final int SEMI=28;
    public static final int TRUE=30;
    public static final int TRY=25;
    public static final int DONT_CARE=44;
    public static final int REAL=42;
    public static final int WS=61;
    public static final int ANY=34;
    public static final int OUT=43;
    public static final int UNTIL=21;
    public static final int BLOCK=5;
    public static final int SL_COMMENT=60;
    public static final int RCURLY=15;
    public static final int OR=27;
    public static final int RPAR=18;
    public static final int PROGRAM=4;
    public static final int CALL=8;
    public static final int CR=54;
    public static final int FALSE=45;
    public static final int BSLASH=53;
    public static final int EscapeSequence=52;
    public static final int BAR=29;
    public static final int STRING=40;

    // delegates
    // delegators


        public GCLNewParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public GCLNewParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return GCLNewParser.tokenNames; }
    public String getGrammarFileName() { return "GCLNew.g"; }


        /** Lexer for the GCL language. */
        private static GCLNewLexer lexer = new GCLNewLexer(null);
        /** Helper class to convert AST trees to namespace. */
        private GCLHelper helper;
        
        public void displayRecognitionError(String[] tokenNames,
                                            RecognitionException e) {
            String hdr = getErrorHeader(e);
            String msg = getErrorMessage(e, tokenNames);
            helper.addError(hdr + " " + msg);
        }
        
        public List<String> getErrors() {
            return helper.getErrors();
        }

        /**
         * Runs the lexer and parser on a given input character stream,
         * with a (presumably empty) namespace.
         * @return the resulting syntax tree
         */
        public MyTree run(CharStream input, NamespaceNew namespace) throws RecognitionException {
            this.helper = new GCLHelper(this, namespace);
            lexer.setCharStream(input);
            setTokenStream(new CommonTokenStream(lexer));
            setTreeAdaptor(new MyTreeAdaptor());
            return (MyTree) program().getTree();
        }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // GCLNew.g:67:1: program : ( function | stat )* -> ^( PROGRAM ^( FUNCTIONS ( function )* ) ^( BLOCK ( stat )* ) ) ;
    public final GCLNewParser.program_return program() throws RecognitionException {
        GCLNewParser.program_return retval = new GCLNewParser.program_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        GCLNewParser.function_return function1 = null;

        GCLNewParser.stat_return stat2 = null;


        RewriteRuleSubtreeStream stream_stat=new RewriteRuleSubtreeStream(adaptor,"rule stat");
        RewriteRuleSubtreeStream stream_function=new RewriteRuleSubtreeStream(adaptor,"rule function");
        try {
            // GCLNew.g:68:3: ( ( function | stat )* -> ^( PROGRAM ^( FUNCTIONS ( function )* ) ^( BLOCK ( stat )* ) ) )
            // GCLNew.g:68:5: ( function | stat )*
            {
            // GCLNew.g:68:5: ( function | stat )*
            loop1:
            do {
                int alt1=3;
                alt1 = dfa1.predict(input);
                switch (alt1) {
            	case 1 :
            	    // GCLNew.g:68:6: function
            	    {
            	    pushFollow(FOLLOW_function_in_program110);
            	    function1=function();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_function.add(function1.getTree());

            	    }
            	    break;
            	case 2 :
            	    // GCLNew.g:68:15: stat
            	    {
            	    pushFollow(FOLLOW_stat_in_program112);
            	    stat2=stat();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_stat.add(stat2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);



            // AST REWRITE
            // elements: stat, function
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 69:5: -> ^( PROGRAM ^( FUNCTIONS ( function )* ) ^( BLOCK ( stat )* ) )
            {
                // GCLNew.g:69:8: ^( PROGRAM ^( FUNCTIONS ( function )* ) ^( BLOCK ( stat )* ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROGRAM, "PROGRAM"), root_1);

                // GCLNew.g:69:18: ^( FUNCTIONS ( function )* )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FUNCTIONS, "FUNCTIONS"), root_2);

                // GCLNew.g:69:30: ( function )*
                while ( stream_function.hasNext() ) {
                    adaptor.addChild(root_2, stream_function.nextTree());

                }
                stream_function.reset();

                adaptor.addChild(root_1, root_2);
                }
                // GCLNew.g:69:41: ^( BLOCK ( stat )* )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(BLOCK, "BLOCK"), root_2);

                // GCLNew.g:69:49: ( stat )*
                while ( stream_stat.hasNext() ) {
                    adaptor.addChild(root_2, stream_stat.nextTree());

                }
                stream_stat.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "block"
    // GCLNew.g:72:1: block : LCURLY ( stat )* RCURLY -> ^( BLOCK ( stat )* ) ;
    public final GCLNewParser.block_return block() throws RecognitionException {
        GCLNewParser.block_return retval = new GCLNewParser.block_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token LCURLY3=null;
        Token RCURLY5=null;
        GCLNewParser.stat_return stat4 = null;


        CommonTree LCURLY3_tree=null;
        CommonTree RCURLY5_tree=null;
        RewriteRuleTokenStream stream_LCURLY=new RewriteRuleTokenStream(adaptor,"token LCURLY");
        RewriteRuleTokenStream stream_RCURLY=new RewriteRuleTokenStream(adaptor,"token RCURLY");
        RewriteRuleSubtreeStream stream_stat=new RewriteRuleSubtreeStream(adaptor,"rule stat");
        try {
            // GCLNew.g:73:2: ( LCURLY ( stat )* RCURLY -> ^( BLOCK ( stat )* ) )
            // GCLNew.g:73:4: LCURLY ( stat )* RCURLY
            {
            LCURLY3=(Token)match(input,LCURLY,FOLLOW_LCURLY_in_block150); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LCURLY.add(LCURLY3);

            // GCLNew.g:73:11: ( stat )*
            loop2:
            do {
                int alt2=2;
                alt2 = dfa2.predict(input);
                switch (alt2) {
            	case 1 :
            	    // GCLNew.g:73:11: stat
            	    {
            	    pushFollow(FOLLOW_stat_in_block152);
            	    stat4=stat();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_stat.add(stat4.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            RCURLY5=(Token)match(input,RCURLY,FOLLOW_RCURLY_in_block155); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RCURLY.add(RCURLY5);



            // AST REWRITE
            // elements: stat
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 73:24: -> ^( BLOCK ( stat )* )
            {
                // GCLNew.g:73:27: ^( BLOCK ( stat )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(BLOCK, "BLOCK"), root_1);

                // GCLNew.g:73:35: ( stat )*
                while ( stream_stat.hasNext() ) {
                    adaptor.addChild(root_1, stream_stat.nextTree());

                }
                stream_stat.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "block"

    public static class function_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "function"
    // GCLNew.g:75:1: function : FUNCTION ID LPAR RPAR block ;
    public final GCLNewParser.function_return function() throws RecognitionException {
        GCLNewParser.function_return retval = new GCLNewParser.function_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token FUNCTION6=null;
        Token ID7=null;
        Token LPAR8=null;
        Token RPAR9=null;
        GCLNewParser.block_return block10 = null;


        CommonTree FUNCTION6_tree=null;
        CommonTree ID7_tree=null;
        CommonTree LPAR8_tree=null;
        CommonTree RPAR9_tree=null;

        try {
            // GCLNew.g:76:3: ( FUNCTION ID LPAR RPAR block )
            // GCLNew.g:76:5: FUNCTION ID LPAR RPAR block
            {
            root_0 = (CommonTree)adaptor.nil();

            FUNCTION6=(Token)match(input,FUNCTION,FOLLOW_FUNCTION_in_function174); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            FUNCTION6_tree = (CommonTree)adaptor.create(FUNCTION6);
            root_0 = (CommonTree)adaptor.becomeRoot(FUNCTION6_tree, root_0);
            }
            ID7=(Token)match(input,ID,FOLLOW_ID_in_function177); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID7_tree = (CommonTree)adaptor.create(ID7);
            adaptor.addChild(root_0, ID7_tree);
            }
            LPAR8=(Token)match(input,LPAR,FOLLOW_LPAR_in_function179); if (state.failed) return retval;
            RPAR9=(Token)match(input,RPAR,FOLLOW_RPAR_in_function182); if (state.failed) return retval;
            pushFollow(FOLLOW_block_in_function185);
            block10=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, block10.getTree());
            if ( state.backtracking==0 ) {
               helper.declareFunction(FUNCTION6_tree); 
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "function"

    public static class stat_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stat"
    // GCLNew.g:80:1: stat : ( block | ALAP stat | WHILE LPAR cond RPAR stat | UNTIL LPAR cond RPAR stat | DO stat ( WHILE LPAR cond RPAR -> ^( BLOCK stat ^( WHILE cond stat ) ) | UNTIL LPAR cond RPAR -> ^( BLOCK stat ^( UNTIL cond stat ) ) ) | IF LPAR cond RPAR stat ( ( ELSE )=> ELSE stat )? | TRY stat ( ( ELSE )=> ELSE stat )? | CHOICE stat ( ( OR )=> OR stat )+ | expr SEMI | var_decl SEMI );
    public final GCLNewParser.stat_return stat() throws RecognitionException {
        GCLNewParser.stat_return retval = new GCLNewParser.stat_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ALAP12=null;
        Token WHILE14=null;
        Token LPAR15=null;
        Token RPAR17=null;
        Token UNTIL19=null;
        Token LPAR20=null;
        Token RPAR22=null;
        Token DO24=null;
        Token WHILE26=null;
        Token LPAR27=null;
        Token RPAR29=null;
        Token UNTIL30=null;
        Token LPAR31=null;
        Token RPAR33=null;
        Token IF34=null;
        Token LPAR35=null;
        Token RPAR37=null;
        Token ELSE39=null;
        Token TRY41=null;
        Token ELSE43=null;
        Token CHOICE45=null;
        Token OR47=null;
        Token SEMI50=null;
        Token SEMI52=null;
        GCLNewParser.block_return block11 = null;

        GCLNewParser.stat_return stat13 = null;

        GCLNewParser.cond_return cond16 = null;

        GCLNewParser.stat_return stat18 = null;

        GCLNewParser.cond_return cond21 = null;

        GCLNewParser.stat_return stat23 = null;

        GCLNewParser.stat_return stat25 = null;

        GCLNewParser.cond_return cond28 = null;

        GCLNewParser.cond_return cond32 = null;

        GCLNewParser.cond_return cond36 = null;

        GCLNewParser.stat_return stat38 = null;

        GCLNewParser.stat_return stat40 = null;

        GCLNewParser.stat_return stat42 = null;

        GCLNewParser.stat_return stat44 = null;

        GCLNewParser.stat_return stat46 = null;

        GCLNewParser.stat_return stat48 = null;

        GCLNewParser.expr_return expr49 = null;

        GCLNewParser.var_decl_return var_decl51 = null;


        CommonTree ALAP12_tree=null;
        CommonTree WHILE14_tree=null;
        CommonTree LPAR15_tree=null;
        CommonTree RPAR17_tree=null;
        CommonTree UNTIL19_tree=null;
        CommonTree LPAR20_tree=null;
        CommonTree RPAR22_tree=null;
        CommonTree DO24_tree=null;
        CommonTree WHILE26_tree=null;
        CommonTree LPAR27_tree=null;
        CommonTree RPAR29_tree=null;
        CommonTree UNTIL30_tree=null;
        CommonTree LPAR31_tree=null;
        CommonTree RPAR33_tree=null;
        CommonTree IF34_tree=null;
        CommonTree LPAR35_tree=null;
        CommonTree RPAR37_tree=null;
        CommonTree ELSE39_tree=null;
        CommonTree TRY41_tree=null;
        CommonTree ELSE43_tree=null;
        CommonTree CHOICE45_tree=null;
        CommonTree OR47_tree=null;
        CommonTree SEMI50_tree=null;
        CommonTree SEMI52_tree=null;
        RewriteRuleTokenStream stream_DO=new RewriteRuleTokenStream(adaptor,"token DO");
        RewriteRuleTokenStream stream_RPAR=new RewriteRuleTokenStream(adaptor,"token RPAR");
        RewriteRuleTokenStream stream_LPAR=new RewriteRuleTokenStream(adaptor,"token LPAR");
        RewriteRuleTokenStream stream_WHILE=new RewriteRuleTokenStream(adaptor,"token WHILE");
        RewriteRuleTokenStream stream_UNTIL=new RewriteRuleTokenStream(adaptor,"token UNTIL");
        RewriteRuleSubtreeStream stream_cond=new RewriteRuleSubtreeStream(adaptor,"rule cond");
        RewriteRuleSubtreeStream stream_stat=new RewriteRuleSubtreeStream(adaptor,"rule stat");
        try {
            // GCLNew.g:81:2: ( block | ALAP stat | WHILE LPAR cond RPAR stat | UNTIL LPAR cond RPAR stat | DO stat ( WHILE LPAR cond RPAR -> ^( BLOCK stat ^( WHILE cond stat ) ) | UNTIL LPAR cond RPAR -> ^( BLOCK stat ^( UNTIL cond stat ) ) ) | IF LPAR cond RPAR stat ( ( ELSE )=> ELSE stat )? | TRY stat ( ( ELSE )=> ELSE stat )? | CHOICE stat ( ( OR )=> OR stat )+ | expr SEMI | var_decl SEMI )
            int alt7=10;
            alt7 = dfa7.predict(input);
            switch (alt7) {
                case 1 :
                    // GCLNew.g:81:4: block
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_block_in_stat203);
                    block11=block();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, block11.getTree());

                    }
                    break;
                case 2 :
                    // GCLNew.g:82:4: ALAP stat
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    ALAP12=(Token)match(input,ALAP,FOLLOW_ALAP_in_stat208); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    ALAP12_tree = (CommonTree)adaptor.create(ALAP12);
                    root_0 = (CommonTree)adaptor.becomeRoot(ALAP12_tree, root_0);
                    }
                    pushFollow(FOLLOW_stat_in_stat211);
                    stat13=stat();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, stat13.getTree());

                    }
                    break;
                case 3 :
                    // GCLNew.g:83:4: WHILE LPAR cond RPAR stat
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    WHILE14=(Token)match(input,WHILE,FOLLOW_WHILE_in_stat216); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    WHILE14_tree = (CommonTree)adaptor.create(WHILE14);
                    root_0 = (CommonTree)adaptor.becomeRoot(WHILE14_tree, root_0);
                    }
                    LPAR15=(Token)match(input,LPAR,FOLLOW_LPAR_in_stat219); if (state.failed) return retval;
                    pushFollow(FOLLOW_cond_in_stat222);
                    cond16=cond();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, cond16.getTree());
                    RPAR17=(Token)match(input,RPAR,FOLLOW_RPAR_in_stat224); if (state.failed) return retval;
                    pushFollow(FOLLOW_stat_in_stat227);
                    stat18=stat();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, stat18.getTree());

                    }
                    break;
                case 4 :
                    // GCLNew.g:84:4: UNTIL LPAR cond RPAR stat
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    UNTIL19=(Token)match(input,UNTIL,FOLLOW_UNTIL_in_stat232); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    UNTIL19_tree = (CommonTree)adaptor.create(UNTIL19);
                    root_0 = (CommonTree)adaptor.becomeRoot(UNTIL19_tree, root_0);
                    }
                    LPAR20=(Token)match(input,LPAR,FOLLOW_LPAR_in_stat235); if (state.failed) return retval;
                    pushFollow(FOLLOW_cond_in_stat238);
                    cond21=cond();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, cond21.getTree());
                    RPAR22=(Token)match(input,RPAR,FOLLOW_RPAR_in_stat240); if (state.failed) return retval;
                    pushFollow(FOLLOW_stat_in_stat243);
                    stat23=stat();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, stat23.getTree());

                    }
                    break;
                case 5 :
                    // GCLNew.g:85:4: DO stat ( WHILE LPAR cond RPAR -> ^( BLOCK stat ^( WHILE cond stat ) ) | UNTIL LPAR cond RPAR -> ^( BLOCK stat ^( UNTIL cond stat ) ) )
                    {
                    DO24=(Token)match(input,DO,FOLLOW_DO_in_stat248); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_DO.add(DO24);

                    pushFollow(FOLLOW_stat_in_stat250);
                    stat25=stat();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_stat.add(stat25.getTree());
                    // GCLNew.g:86:4: ( WHILE LPAR cond RPAR -> ^( BLOCK stat ^( WHILE cond stat ) ) | UNTIL LPAR cond RPAR -> ^( BLOCK stat ^( UNTIL cond stat ) ) )
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==WHILE) ) {
                        alt3=1;
                    }
                    else if ( (LA3_0==UNTIL) ) {
                        alt3=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 0, input);

                        throw nvae;
                    }
                    switch (alt3) {
                        case 1 :
                            // GCLNew.g:86:6: WHILE LPAR cond RPAR
                            {
                            WHILE26=(Token)match(input,WHILE,FOLLOW_WHILE_in_stat258); if (state.failed) return retval; 
                            if ( state.backtracking==0 ) stream_WHILE.add(WHILE26);

                            LPAR27=(Token)match(input,LPAR,FOLLOW_LPAR_in_stat260); if (state.failed) return retval; 
                            if ( state.backtracking==0 ) stream_LPAR.add(LPAR27);

                            pushFollow(FOLLOW_cond_in_stat262);
                            cond28=cond();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) stream_cond.add(cond28.getTree());
                            RPAR29=(Token)match(input,RPAR,FOLLOW_RPAR_in_stat264); if (state.failed) return retval; 
                            if ( state.backtracking==0 ) stream_RPAR.add(RPAR29);



                            // AST REWRITE
                            // elements: stat, cond, WHILE, stat
                            // token labels: 
                            // rule labels: retval
                            // token list labels: 
                            // rule list labels: 
                            // wildcard labels: 
                            if ( state.backtracking==0 ) {
                            retval.tree = root_0;
                            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                            root_0 = (CommonTree)adaptor.nil();
                            // 86:27: -> ^( BLOCK stat ^( WHILE cond stat ) )
                            {
                                // GCLNew.g:86:30: ^( BLOCK stat ^( WHILE cond stat ) )
                                {
                                CommonTree root_1 = (CommonTree)adaptor.nil();
                                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(BLOCK, "BLOCK"), root_1);

                                adaptor.addChild(root_1, stream_stat.nextTree());
                                // GCLNew.g:86:43: ^( WHILE cond stat )
                                {
                                CommonTree root_2 = (CommonTree)adaptor.nil();
                                root_2 = (CommonTree)adaptor.becomeRoot(stream_WHILE.nextNode(), root_2);

                                adaptor.addChild(root_2, stream_cond.nextTree());
                                adaptor.addChild(root_2, stream_stat.nextTree());

                                adaptor.addChild(root_1, root_2);
                                }

                                adaptor.addChild(root_0, root_1);
                                }

                            }

                            retval.tree = root_0;}
                            }
                            break;
                        case 2 :
                            // GCLNew.g:87:6: UNTIL LPAR cond RPAR
                            {
                            UNTIL30=(Token)match(input,UNTIL,FOLLOW_UNTIL_in_stat287); if (state.failed) return retval; 
                            if ( state.backtracking==0 ) stream_UNTIL.add(UNTIL30);

                            LPAR31=(Token)match(input,LPAR,FOLLOW_LPAR_in_stat289); if (state.failed) return retval; 
                            if ( state.backtracking==0 ) stream_LPAR.add(LPAR31);

                            pushFollow(FOLLOW_cond_in_stat291);
                            cond32=cond();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) stream_cond.add(cond32.getTree());
                            RPAR33=(Token)match(input,RPAR,FOLLOW_RPAR_in_stat293); if (state.failed) return retval; 
                            if ( state.backtracking==0 ) stream_RPAR.add(RPAR33);



                            // AST REWRITE
                            // elements: UNTIL, stat, cond, stat
                            // token labels: 
                            // rule labels: retval
